# usedu

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.ja.md  README.md
.github/workflows/: ci.yml
benchmarks/: README.ja.md  README.md  baseline.ja.md  baseline.json  baseline.md
crates/usedu-core/: Cargo.toml
crates/usedu-core/src/: engine.rs  lib.rs
crates/usedu-core/src/scanner/: errors.rs  metadata.rs  mod.rs  options.rs  progress.rs  scan.rs
crates/usedu-core/src/util/: mod.rs  units.rs
crates/usedu-protocol/: Cargo.toml
crates/usedu-protocol/src/: lib.rs
docs/: agent-security.ja.md  agent-security.md  design.ja.md  design.md  json-contract.ja.md  json-contract.md  mcp-tools.ja.md  mcp-tools.md  semantics.ja.md  semantics.md
docs/adr/: 0001-product-contract.ja.md  0001-product-contract.md
examples/: bench_scanner.rs
fixtures/json/: current-report-with-errors.golden.json  current-report-without-errors.golden.json
fixtures/report/: current-summary.golden.txt
schemas/: usedu-json-v2.schema.json
scripts/: build-macos-release.sh
src/: cli.rs  lib.rs  main.rs  mcp.rs
src/output/: bars.rs  format.rs  json.rs  mod.rs  table.rs  tree.rs
src/protocol/: mod.rs
src/scanner/: bulk.rs  errors.rs  mod.rs  options.rs  result.rs  scan.rs
src/tui/: app.rs  view.rs
src/util/: path.rs  timing.rs
tests/: adversarial_output.rs  conformance.rs  json_golden.rs  mcp_stdio.rs  protocol_behavior.rs  report_golden.rs  scan_engine.rs  scanner_behavior.rs
