[package]
name = "usedu"
version = "0.1.0"
edition = "2021"
description = "A read-only macOS disk usage CLI/TUI that reports allocated file-system size."
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7"
crossterm = "0.28"
indicatif = "0.17"
libc = "0.2"
ratatui = "0.29"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
